--- a/src/Views/TextDiffView.axaml
+++ b/src/Views/TextDiffView.axaml
@@ -22,7 +22,7 @@
                                        AddedHighlightBrush="{DynamicResource Brush.Diff.AddedHighlight}"
                                        DeletedHighlightBrush="{DynamicResource Brush.Diff.DeletedHighlight}"
                                        IndicatorForeground="{DynamicResource Brush.FG2}"
-                                       FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont}"
+                                       FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFontWithFallbackDefault}"
                                        UseSyntaxHighlighting="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSyntaxHighlighting}"
                                        WordWrap="{Binding Source={x:Static vm:Preference.Instance}, Path=EnableDiffViewWordWrap}"
                                        ShowHiddenSymbols="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowHiddenSymbolsInDiffView}"
@@ -43,7 +43,7 @@
                                            AddedHighlightBrush="{DynamicResource Brush.Diff.AddedHighlight}"
                                            DeletedHighlightBrush="{DynamicResource Brush.Diff.DeletedHighlight}"
                                            IndicatorForeground="{DynamicResource Brush.FG2}"
-                                           FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont}"
+                                           FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFontWithFallbackDefault}"
                                            UseSyntaxHighlighting="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSyntaxHighlighting}"
                                            WordWrap="{Binding Source={x:Static vm:Preference.Instance}, Path=EnableDiffViewWordWrap}"
                                            ShowHiddenSymbols="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowHiddenSymbolsInDiffView}"
@@ -63,7 +63,7 @@
                                            AddedHighlightBrush="{DynamicResource Brush.Diff.AddedHighlight}"
                                            DeletedHighlightBrush="{DynamicResource Brush.Diff.DeletedHighlight}"
                                            IndicatorForeground="{DynamicResource Brush.FG2}"
-                                           FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont}"
+                                           FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFontWithFallbackDefault}"
                                            UseSyntaxHighlighting="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSyntaxHighlighting}"
                                            WordWrap="{Binding Source={x:Static vm:Preference.Instance}, Path=EnableDiffViewWordWrap}"
                                            ShowHiddenSymbols="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowHiddenSymbolsInDiffView}"
