--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -73,7 +73,7 @@
                                            BranchNameBackground="{DynamicResource Brush.DecoratorBranch}"
                                            TagNameBackground="{DynamicResource Brush.DecoratorTag}"
                                            LabelForeground="{DynamicResource Brush.DecoratorFG}"
-                                           FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont}"
+                                           FontFamily="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFontWithFallbackDefault}"
                                            FontSize="10"
                                            VerticalAlignment="Center"/>
 
