--- a/src/Resources/Themes.axaml
+++ b/src/Resources/Themes.axaml
@@ -103,4 +103,8 @@
   <SolidColorBrush x:Key="Brush.Diff.AddedHighlight" Color="{DynamicResource Color.Diff.AddedHighlight}"/>
   <SolidColorBrush x:Key="Brush.Diff.DeletedHighlight" Color="{DynamicResource Color.Diff.DeletedHighlight}"/>
   <SolidColorBrush x:Key="Brush.Link" Color="{DynamicResource Color.Link}"/>
+
+  <FontFamily x:Key="Fonts.Default">$Default</FontFamily>
+  <FontFamily x:Key="Fonts.Monospace">fonts:SourceGit#JetBrains Mono,$Default</FontFamily>
+  <FontFamily x:Key="Fonts.Primary">fonts:SourceGit#JetBrains Mono,$Default</FontFamily>
 </ResourceDictionary>
