--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -157,39 +157,19 @@
                        Text="{DynamicResource Text.Preference.Appearance.DefaultFont}"
                        HorizontalAlignment="Right"
                        Margin="0,0,16,0"/>
-            <ComboBox Grid.Row="1" Grid.Column="1"
-                      MinHeight="28"
-                      Padding="8,0"
-                      HorizontalAlignment="Stretch"
-                      ItemsSource="{Binding #ThisControl.InstalledFonts}"
-                      SelectedItem="{Binding DefaultFont, Mode=TwoWay}">
-              <ComboBox.ItemTemplate>
-                <DataTemplate DataType="FontFamily">
-                  <Border Height="24">
-                    <TextBlock VerticalAlignment="Center" Text="{Binding Name}" FontFamily="{Binding}"/>
-                  </Border>
-                </DataTemplate>
-              </ComboBox.ItemTemplate>
-            </ComboBox>
+            <TextBox Grid.Row="1" Grid.Column="1"
+                     Height="28"
+                     CornerRadius="3"
+                     Text="{Binding DefaultFontFamily, Mode=TwoWay}"/>
 
             <TextBlock Grid.Row="2" Grid.Column="0"
                        Text="{DynamicResource Text.Preference.Appearance.MonospaceFont}"
                        HorizontalAlignment="Right"
                        Margin="0,0,16,0"/>
-            <ComboBox Grid.Row="2" Grid.Column="1"
-                      MinHeight="28"
-                      Padding="8,0"
-                      HorizontalAlignment="Stretch"
-                      ItemsSource="{Binding #ThisControl.InstalledMonospaceFonts}"
-                      SelectedItem="{Binding MonospaceFont, Mode=TwoWay}">
-              <ComboBox.ItemTemplate>
-                <DataTemplate DataType="FontFamily">
-                  <Border Height="24">
-                    <TextBlock VerticalAlignment="Center" Text="{Binding Name}" FontFamily="{Binding}"/>
-                  </Border>
-                </DataTemplate>
-              </ComboBox.ItemTemplate>
-            </ComboBox>
+            <TextBox Grid.Row="2" Grid.Column="1"
+                     Height="28"
+                     CornerRadius="3"
+                     Text="{Binding MonospaceFontFamily, Mode=TwoWay}"/>
 
             <TextBlock Grid.Row="3" Grid.Column="0"
                        Text="{DynamicResource Text.Preference.Appearance.DefaultFontSize}"
