--- a/src/Resources/Locales/zh_CN.axaml
+++ b/src/Resources/Locales/zh_CN.axaml
@@ -433,6 +433,7 @@
   <x:String x:Key="Text.Pull.Title" xml:space="preserve">拉回（拉取并合并）</x:String>
   <x:String x:Key="Text.Pull.UseRebase" xml:space="preserve">使用变基方式合并分支</x:String>
   <x:String x:Key="Text.Push" xml:space="preserve">推送(push)</x:String>
+  <x:String x:Key="Text.Push.CheckSubmodules" xml:space="preserve">确保子模块变更已推送</x:String>
   <x:String x:Key="Text.Push.Force" xml:space="preserve">启用强制推送</x:String>
   <x:String x:Key="Text.Push.Local" xml:space="preserve">本地分支 ：</x:String>
   <x:String x:Key="Text.Push.Remote" xml:space="preserve">远程仓库 ：</x:String>
