--- a/src/Views/Push.axaml
+++ b/src/Views/Push.axaml
@@ -12,7 +12,7 @@
                Classes="bold"
                Text="{DynamicResource Text.Push.Title}"/>
 
-    <Grid Margin="0,16,0,0" RowDefinitions="32,32,32,Auto,32,32" ColumnDefinitions="150,*">
+    <Grid Margin="0,16,0,0" RowDefinitions="32,32,32,Auto,Auto,32,32" ColumnDefinitions="130,*">
       <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
@@ -78,10 +78,16 @@
                 IsVisible="{Binding IsSetTrackOptionVisible}"/>
 
       <CheckBox Grid.Row="4" Grid.Column="1"
+                Height="32"
+                Content="{DynamicResource Text.Push.CheckSubmodules}"
+                IsChecked="{Binding CheckSubmodules, Mode=TwoWay}"
+                IsVisible="{Binding IsCheckSubmodulesVisible}"/>
+
+      <CheckBox Grid.Row="5" Grid.Column="1"
                 Content="{DynamicResource Text.Push.WithAllTags}"
                 IsChecked="{Binding PushAllTags, Mode=TwoWay}"/>
 
-      <CheckBox Grid.Row="5" Grid.Column="1"
+      <CheckBox Grid.Row="6" Grid.Column="1"
                 Content="{DynamicResource Text.Push.Force}"
                 IsChecked="{Binding ForcePush, Mode=TwoWay}"/>
     </Grid>
