--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -514,8 +514,11 @@
   <Style Selector="Button.flat.primary:pointerover /template/ ContentPresenter#PART_ContentPresenter">
     <Setter Property="Background" Value="Transparent"/>
   </Style>
-  <Style Selector="Button.flat.primary > TextBlock">
+  <Style Selector="Button.flat.primary TextBlock">
     <Setter Property="Foreground" Value="{DynamicResource AccentButtonForeground}"/>
+  </Style>
+  <Style Selector="Button.flat.primary ToolTip TextBlock">
+    <Setter Property="Foreground" Value="{DynamicResource Brush.FG1}"/>
   </Style>
 
   <Style Selector="aes|SearchPanel">
